--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="loaders.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script defer src="app.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
+    <script src="app.js"></script>
 </head>
 
 <body class="text-gray-100 bg-gray-800 min-h-screen max-h-screen">
-    <div class="container mx-auto px-4 flex flex-col">
-        <div class="text-center h-screen-25 text-3xl text-blue-500 pt-10">Have I been infected?</div>
+    <div id="background-image" class="bg-gray-800"></div>
+    <div class="container mx-auto px-4 flex flex-col absolute z-10 top-0 left-0">
+        <div class="text-center h-screen-25 text-3xl text-blue-500 pt-10 shadow">Have I been infected?</div>
 
 
         <div class="h-screen-50 text-center">
-            <span id="label" class="transition duration-200"></span>
-            <div class="loading-indicator" id="analyzing-indicator">
+            <span id="label" class="transition duration-200 text-gray-100 text-xl">Place your finger to the reader and wait for the measurement to complete</span>
+            <div class="loading-indicator hidden" id="analyzing-indicator">
                 <div class="dot-loader"></div>
                 <div class="dot-loader"></div>
                 <div class="dot-loader"></div>
@@ -27,10 +30,10 @@
 
 
         <div class="flex flex-col mx-auto">
-            <img id="fingerprint-scanner" src="./images/fingerprint.svg" alt="Fingerprint scanner" class="z-50 h-20 w-20 mx-auto" >
-            <div id="scanning-animation" class="reverse-spinner h-40 w-40 relative"></div>
+            <img id="fingerprint-scanner" src="./images/fingerprint.svg" alt="Fingerprint scanner" class="z-50 h-20 w-20 mx-auto relative" >
+            <div id="scanning-animation" class="reverse-spinner h-40 w-40 relative hidden"></div>
         </div>
-        <button id="reset" class="border border-blue-500 rounded h-20 shadow font-semibold">Measure again</button>
+        <button id="reset" class="border border-blue-500 rounded h-20 shadow font-semibold hidden">Measure again</button>
 
 
     </div>
