--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 
 
         <div class="flex flex-col mx-auto">
-            <img id="fingerprint-scanner" src="./images/fingerprint.svg" alt="Fingerprint scanner" class="z-50 h-20 w-20 mx-auto relative" >
+            <img id="fingerprint-scanner" src="./images/fingerprint.svg" alt="Fingerprint scanner" class="z-50 h-20 w-20 mx-auto relative pulse" >
             <div id="scanning-animation" class="reverse-spinner h-40 w-40 relative hidden"></div>
         </div>
         <button id="reset" class="border border-blue-500 rounded h-20 shadow font-semibold hidden">Measure again</button>
