--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,10 @@
     <script src="app.js"></script>
 </head>
 
-<body class="text-gray-100 bg-gray-800 min-h-screen max-h-screen">
-    <div id="background-image" class="bg-gray-800"></div>
+<body class="text-gray-100 bg-black min-h-screen max-h-screen mx-auto">
+    <div id="background-image" class="bg-gray-800 container"></div>
     <div class="container mx-auto px-4 flex flex-col absolute z-10 top-0 left-0">
         <div class="text-center h-screen-25 text-3xl text-blue-500 pt-10 shadow">Have I been infected?</div>
-
 
         <div class="h-screen-50 text-center">
             <span id="label" class="transition duration-200 text-gray-100 text-xl">Place your finger to the reader and wait for the measurement to complete</span>
@@ -27,7 +26,6 @@
                 <div class="dot-loader"></div>
             </div>
         </div>
-
 
         <div class="flex flex-col mx-auto">
             <img id="fingerprint-scanner" src="./images/fingerprint.svg" alt="Fingerprint scanner" class="z-50 h-20 w-20 mx-auto relative pulse" >
