--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,16 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132466202-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-132466202-2');
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Have I been Infected?</title>
@@ -19,7 +29,8 @@
         <div class="text-center h-screen-25 text-3xl text-blue-500 pt-10 shadow">Have I been infected?</div>
 
         <div class="h-screen-50 text-center">
-            <span id="label" class="transition duration-200 text-gray-100 text-xl">Place your finger to the reader and wait for the measurement to complete</span>
+            <span id="label" class="transition duration-200 text-gray-100 text-xl">Place your finger to the reader and
+                wait for the measurement to complete</span>
             <div class="loading-indicator hidden" id="analyzing-indicator">
                 <div class="dot-loader"></div>
                 <div class="dot-loader"></div>
@@ -28,10 +39,12 @@
         </div>
 
         <div class="flex flex-col mx-auto">
-            <img id="fingerprint-scanner" src="./images/fingerprint.svg" alt="Fingerprint scanner" class="z-50 h-20 w-20 mx-auto relative pulse" >
+            <img id="fingerprint-scanner" src="./images/fingerprint.svg" alt="Fingerprint scanner"
+                class="z-50 h-20 w-20 mx-auto relative pulse">
             <div id="scanning-animation" class="reverse-spinner h-40 w-40 relative hidden"></div>
         </div>
-        <button id="reset" class="border border-blue-500 rounded h-20 shadow font-semibold hidden">Measure again</button>
+        <button id="reset" class="border border-blue-500 rounded h-20 shadow font-semibold hidden">Measure
+            again</button>
 
 
     </div>
