--- a/src/index.html
+++ b/src/index.html
@@ -23,15 +23,20 @@
     <script src="app.js"></script>
 </head>
 
-<body class="text-gray-100 bg-black min-h-screen max-h-screen mx-auto">
-    <div id="background-image" class="bg-gray-800 container"></div>
+<body class="text-gray-100 bg-black min-h-screen max-h-screen mx-auto" x-data="HaveIBeenInfected()" x-init="init()">
+    <div id="background-image" class="bg-gray-800 container" x-bind:class="{ 'deblur': deblurBackground() }"></div>
     <div class="container mx-auto px-4 flex flex-col absolute z-10 top-0 left-0">
         <div class="text-center h-screen-25 text-3xl text-blue-500 pt-10 shadow">Have I been infected?</div>
 
         <div class="h-screen-50 text-center">
-            <span id="label" class="transition duration-200 text-gray-100 text-xl">Place your finger to the reader and
-                wait for the measurement to complete</span>
-            <div class="loading-indicator hidden" id="analyzing-indicator">
+            <span id="label" class="transition duration-200 text-gray-100 text-xl" x-show="isNotMobile()">Unfortunatelly this application works only with mobile devices.</span>
+            <span id="label" class="transition duration-200 text-gray-100 text-xl" x-show="isIdle()">Place your finger to the reader and wait for the measurement to complete</span>
+            <span id="label" class="transition duration-200 text-gray-100 text-xl" x-show="isMeasuring()">Measuring...</span>
+            <span id="label" class="transition duration-200 text-gray-100 text-xl" x-show="isAnalyzing()">Analyzing the results...</span>
+            <span id="label" class="transition duration-200 text-green-600 text-3xl" x-show="isHealthy()">You are probably healthy</span>
+            <span id="label" class="transition duration-200 text-red-600 text-3xl" x-show="isInfected()">You migth have been infected</span>
+            
+            <div class="loading-indicator" id="analyzing-indicator" x-show="isAnalyzing()">
                 <div class="dot-loader"></div>
                 <div class="dot-loader"></div>
                 <div class="dot-loader"></div>
@@ -39,12 +44,23 @@
         </div>
 
         <div class="flex flex-col mx-auto">
-            <img id="fingerprint-scanner" src="./images/fingerprint.svg" alt="Fingerprint scanner"
-                class="z-50 h-20 w-20 mx-auto relative pulse">
-            <div id="scanning-animation" class="reverse-spinner h-40 w-40 relative hidden"></div>
+            <img 
+            id="fingerprint-scanner" 
+            src="./images/fingerprint.svg" 
+            alt="Fingerprint scanner" 
+            class="z-50 h-20 w-20 mx-auto relative" 
+            x-show="showFingerprintScanner()" 
+            x-bind:class="{ 'pulse': isIdle() }"
+            @touchstart="pressScanner()"
+            @touchend="releaseScanner()"
+            >
+            <div id="scanning-animation" class="reverse-spinner h-40 w-40 relative" x-show="isMeasuring()"></div>
         </div>
-        <button id="reset" class="border border-blue-500 rounded h-20 shadow font-semibold hidden">Measure
-            again</button>
+        <button id="reset" 
+        class="border border-blue-500 rounded h-20 shadow font-semibold"
+        x-show="showResetButton()"
+        @click="measureAgain()"
+        >Measure again</button>
 
 
     </div>
